--- a/Calculator.Controls/Operators/Fraction.xaml
+++ b/Calculator.Controls/Operators/Fraction.xaml
@@ -1,15 +1,13 @@
 ﻿<Control
-    x:Class="Calculator.Controls.Fraction"
+    x:Class="Calculator.Controls.Operators.Fraction"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Calculator.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="clr-namespace:Calculator.Controls"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="400" x:Name="This" Template="{DynamicResource FractionTemplate}">
-    <Control.Resources>
-        <ControlTemplate x:Key="FractionTemplate" TargetType="controls:Fraction">
+    d:DesignHeight="300" d:DesignWidth="400" x:Name="This">
+    <Control.Template>
+        <ControlTemplate TargetType="Control">
             <AdornerDecorator>
                 <Canvas DataContext="{Binding ElementName=This}">
                     <ContentPresenter Content="{Binding Numerator}" Canvas.Left="{Binding NumeratorLeft}" Canvas.Top="0" Canvas.ZIndex="0" />
@@ -17,5 +15,5 @@
                 </Canvas>
             </AdornerDecorator>
         </ControlTemplate>
-    </Control.Resources>
+    </Control.Template>
 </Control>
