--- a/Calculator.Controls/Operators/Root.xaml
+++ b/Calculator.Controls/Operators/Root.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="Calculator.Controls.Root"
+﻿<UserControl x:Class="Calculator.Controls.Operators.Root"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Calculator.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" x:Name="This" Template="{DynamicResource RootTemplate}">
-    <UserControl.Resources>
-        <ControlTemplate x:Key="RootTemplate" TargetType="local:Root">
+             d:DesignHeight="300" d:DesignWidth="300" x:Name="This">
+    <UserControl.Template>
+        <ControlTemplate TargetType="UserControl">
             <AdornerDecorator>
                 <Canvas DataContext="{Binding ElementName=This}">
                     <ContentPresenter Content="{Binding Index}" RenderTransform="{Binding IndexTransform}" />
@@ -16,5 +15,5 @@
                 </Canvas>
             </AdornerDecorator>
         </ControlTemplate>
-    </UserControl.Resources>
+    </UserControl.Template>
 </UserControl>
