--- a/Calculator.Controls/Variables/Scalar.xaml
+++ b/Calculator.Controls/Variables/Scalar.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="Calculator.Controls.Scalar"
+﻿<UserControl x:Class="Calculator.Controls.Variables.Scalar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Calculator.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" x:Name="This" Template="{DynamicResource ScalarTemplate}">
-    <UserControl.Resources>
-        <ControlTemplate x:Key="ScalarTemplate" TargetType="local:Scalar">
+             d:DesignHeight="300" d:DesignWidth="300" x:Name="This" >
+    <UserControl.Template>
+        <ControlTemplate TargetType="UserControl">
             <AdornerDecorator DataContext="{Binding ElementName=This}">
                 <Canvas>
                     <TextBlock Canvas.Left="{Binding Padding.Left}" Canvas.Right="{Binding Padding.Right}"
@@ -16,5 +15,5 @@
                 </Canvas>
             </AdornerDecorator>
         </ControlTemplate>
-    </UserControl.Resources>
+    </UserControl.Template>
 </UserControl>
