--- a/Calculator.Pages/MainWindow.xaml
+++ b/Calculator.Pages/MainWindow.xaml
@@ -16,29 +16,32 @@
             <keypad:Keypad DockPanel.Dock="Bottom" HorizontalAlignment="Center" x:Name="PART_Keypad" />
             <ScrollViewer  HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <DockPanel LastChildFill="False">
+                    <DockPanel.LayoutTransform>
+                        <ScaleTransform CenterX="0" CenterY="0" ScaleX="3" ScaleY="3"/>
+                    </DockPanel.LayoutTransform>
                     <Border DockPanel.Dock="Top" Margin="4">
                         <g:AlignPanel HorizontalAlignment="Left">
-                            <TextBlock Text="%0:" FontStyle="Italic" Foreground="{StaticResource SecondaryAccentBrush}" FontSize="24" Padding="0,0,16,0" />
-                            <TextBlock Text="ax²+bx+c=0" FontStyle="Italic" Foreground="White" FontSize="24" />
+                            <v:Scalar Text="%0:" FontStyle="Italic" Foreground="{StaticResource SecondaryAccentBrush}" FontSize="12" Padding="0,0,16,0" />
+                            <v:Scalar Text="ax²+bx+c=0" FontStyle="Italic" Foreground="White" FontSize="12" />
                         </g:AlignPanel>
                     </Border>
                     <Border DockPanel.Dock="Top" Margin="4">
                         <g:AlignPanel HorizontalAlignment="Left">
-                            <TextBlock Text="%1:" FontStyle="Italic" Foreground="{StaticResource SecondaryAccentBrush}" FontSize="24" Padding="0,0,16,0" />
-                            <TextBlock Text="solve(" FontSize="24" Foreground="White" />
-                            <TextBlock Text="%0" FontSize="24" Foreground="{StaticResource SecondaryAccentBrush}" />
-                            <TextBlock Text=",x)" FontSize="24" Foreground="White" />
+                            <v:Scalar Text="%1:" FontStyle="Italic" Foreground="{StaticResource SecondaryAccentBrush}" FontSize="12" Padding="0,0,16,0" />
+                            <v:Scalar Text="solve(" FontSize="12" Foreground="White" />
+                            <v:Scalar Text="%0" FontSize="12" Foreground="{StaticResource SecondaryAccentBrush}" />
+                            <v:Scalar Text=",x)" FontSize="12" Foreground="White" />
                         </g:AlignPanel>
                     </Border>
                     <Border DockPanel.Dock="Top" Margin="4" HorizontalAlignment="Left">
                         <g:AlignPanel HorizontalAlignment="Left">
-                            <TextBlock Text="%2:" FontStyle="Italic" Foreground="{StaticResource SecondaryAccentBrush}" FontSize="24" Padding="0,0,16,0" />
+                            <TextBlock Text="%2:" FontStyle="Italic" Foreground="{StaticResource SecondaryAccentBrush}" FontSize="12" Padding="0,0,16,0" />
 
-                            <v:Scalar Text="x=" FontSize="24" Foreground="White" />
-                            <g:Set FontSize="24" Foreground="White">
+                            <v:Scalar Text="x=" FontSize="12" Foreground="White" />
+                            <g:Set FontSize="12" Foreground="White">
                                 <g:AlignPanel HorizontalAlignment="Left">
                                     <!--Quadratic formula-->
-                                    <o:Fraction FontSize="24" Foreground="White">
+                                    <o:Fraction FontSize="12" Foreground="White">
                                         <o:Fraction.Numerator>
                                             <g:AlignPanel>
                                                 <v:Scalar Text="-b±" />
@@ -46,7 +49,15 @@
                                                     <g:AlignPanel>
                                                         <o:Pow Margin="0">
                                                             <o:Pow.Exponent>
-                                                                <v:Scalar Text="2" />
+                                                                <o:Fraction Foreground="Ivory">
+                                                                    <o:Fraction.Numerator>
+                                                                        <v:Scalar Text="2" />
+                                                                    </o:Fraction.Numerator>
+                                                                    <o:Fraction.Denominator>
+                                                                        <v:Scalar Text="2" />
+                                                                    </o:Fraction.Denominator>
+                                                                </o:Fraction>
+                                                                
                                                             </o:Pow.Exponent>
                                                             <v:Scalar Text="b" />
                                                         </o:Pow>
@@ -88,7 +99,7 @@
                                     <v:Scalar Text="," Padding="4,0,8,0" />
 
                                     <!--Reduced quadratic equation-->
-                                    <o:Fraction Background="Blue" FontSize="24">
+                                    <o:Fraction Background="Blue" FontSize="12">
                                         <o:Fraction.Numerator>
                                             <g:AlignPanel>
                                                 <v:Scalar Text="-" />
@@ -140,12 +151,13 @@
                         </g:AlignPanel>
                     </Border>
                     <Border>
-                        <g:Parentheses FontSize="24" Foreground="White">
+                        <g:Parentheses FontSize="12" Foreground="White">
                             <v:Scalar Text="2" />
                         </g:Parentheses>
                     </Border>
                     <Border DockPanel.Dock="Top" />
                 </DockPanel>
+                
             </ScrollViewer>
         </DockPanel>
     </materialDesign:DialogHost>
