--- a/Calculator.Controls/Variables/Constant.xaml
+++ b/Calculator.Controls/Variables/Constant.xaml
@@ -1,8 +1,8 @@
-﻿<UserControl x:Class="Calculator.Controls.Variables.Tensor"
+﻿<UserControl x:Class="Calculator.Controls.Variables.Constant"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" x:Name="This" >
+             d:DesignHeight="300" d:DesignWidth="300" x:Name="This">
 </UserControl>
