--- a/Calculator.Controls/Variables/Unit.xaml
+++ b/Calculator.Controls/Variables/Unit.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Calculator.Controls.Variables.Tensor"
+﻿<UserControl x:Class="Calculator.Controls.Variables.Unit"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
