--- a/Calculator/App.xaml
+++ b/Calculator/App.xaml
@@ -5,6 +5,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Calculator.Styling;component/Themes/Generic.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Calculator.Controls;component/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
