--- a/Calculator.Pages/Themes/Generic.xaml
+++ b/Calculator.Pages/Themes/Generic.xaml
@@ -32,12 +32,19 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate>
-                                <StackPanel DataContext="{Binding ElementName=This}">
-                                    <Button Content="Save" Command="{Binding SaveCommand}" />
-                                    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                                <Grid DataContext="{Binding ElementName=This}">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Button Grid.Row="1" Grid.Column="0" Content="Save" Command="{Binding SaveCommand}" />
+                                    <ScrollViewer Grid.Row="0" Grid.Column="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                                         <ListView ItemTemplate="{StaticResource PathSampleTemplate}" ItemsSource="{Binding TrainingSet, Mode=TwoWay}" />
                                     </ScrollViewer>
-                                </StackPanel>
+                                </Grid>
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
