--- a/Calculator.Pages/GestureTrainingFrame.xaml
+++ b/Calculator.Pages/GestureTrainingFrame.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Calculator.Pages.GestureRecognizerTraining"
+﻿<UserControl x:Class="Calculator.Pages.GestureTrainingFrame"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
