--- a/Calculator.Styling/Themes/Generic.xaml
+++ b/Calculator.Styling/Themes/Generic.xaml
@@ -1,71 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation/shell"
-                    xmlns:styling="clr-namespace:Calculator.Styling">
+                    xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation/shell">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary>
-            <FontFamily x:Key="NotoSans">pack://application:,,,/Calculator.Styling;component/Fonts/#Noto Sans</FontFamily>
-            <FontFamily x:Key="NotoSerif">pack://application:,,,/Calculator.Styling;component/Fonts/#NotoSerif</FontFamily>
-            <FontFamily x:Key="NotoSansSymbols">pack://application:,,,/Calculator.Styling;component/Fonts/#Noto Sans Symbols</FontFamily>
-        </ResourceDictionary>
-        <ResourceDictionary>
-            <styling:ColorToBrushValueConverter x:Key="ColorToBrush" />
-        </ResourceDictionary>
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.Bluegrey.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Cyan.xaml" />
-
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Amber.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Blue.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.BlueGrey.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Brown.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Cyan.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.DeepOrange.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.DeepPurple.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Green.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Grey.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Indigo.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.LightBlue.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.LightGreen.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Lime.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Orange.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Pink.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Purple.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Red.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Teal.Named.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Yellow.Named.xaml" />
-        
-        <ResourceDictionary>
-            <Color x:Key="Primary50">#eceff1</Color>
-            <Color x:Key="Primary50Foreground">#DD000000</Color>
-            <Color x:Key="Primary100">#cfd8dc</Color>
-            <Color x:Key="Primary100Foreground">#DD000000</Color>
-            <Color x:Key="Primary200">#b0bec5</Color>
-            <Color x:Key="Primary200Foreground">#DD000000</Color>
-            <Color x:Key="Primary300">#90a4ae</Color>
-            <Color x:Key="Primary300Foreground">#DD000000</Color>
-            <Color x:Key="Primary400">#78909c</Color>
-            <Color x:Key="Primary400Foreground">#FFFFFFFF</Color>
-            <Color x:Key="Primary500">#607d8b</Color>
-            <Color x:Key="Primary500Foreground">#DDFFFFFF</Color>
-            <Color x:Key="Primary600">#546e7a</Color>
-            <Color x:Key="Primary600Foreground">#DDFFFFFF</Color>
-            <Color x:Key="Primary700">#455a64</Color>
-            <Color x:Key="Primary700Foreground">#DDFFFFFF</Color>
-            <Color x:Key="Primary800">#37474f</Color>
-            <Color x:Key="Primary800Foreground">#DDFFFFFF</Color>
-            <Color x:Key="Primary900">#263238</Color>
-            <Color x:Key="Primary900Foreground">#DDFFFFFF</Color>
-            <Color x:Key="Accent100">#84ffff</Color>
-            <Color x:Key="Accent100Foreground">#DD000000</Color>
-            <Color x:Key="Accent200">#18ffff</Color>
-            <Color x:Key="Accent200Foreground">#DD000000</Color>
-            <Color x:Key="Accent400">#00e5ff</Color>
-            <Color x:Key="Accent400Foreground">#DD000000</Color>
-            <Color x:Key="Accent700">#00b8d4</Color>
-            <Color x:Key="Accent700Foreground">#DD000000</Color>
-        </ResourceDictionary>
+        <ResourceDictionary Source="Fonts.Dictionary.xaml" />
+        <ResourceDictionary Source="Colors.Dictionary.xaml" />
         <ResourceDictionary>
             <Style x:Key="StandardStyle" TargetType="{x:Type Window}">
                 <Setter Property="FontFamily" Value="{StaticResource NotoSans}" />
@@ -86,13 +24,14 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
 
-                                <Border Grid.Column="0" Grid.Row="1" Background="{StaticResource MaterialDesignPaper}" Margin="0">
-                                    <AdornerDecorator>
-                                        <Frame Name="PART_MainFrame" />
-                                    </AdornerDecorator>
+                                <!-- Content -->
+                                <Border Padding="4" Grid.Column="0" Grid.Row="1" Background="{StaticResource MaterialDesignPaper}" Margin="0">
+                                    <Frame Name="PART_MainFrame" />
                                 </Border>
 
-                                <DockPanel Grid.Column="0" Grid.Row="0" LastChildFill="True" Background="{Binding Source={StaticResource Primary500}, Converter={StaticResource ColorToBrush}}">
+                                <!-- Chrome bar -->
+                                <Border Grid.Column="0" Grid.Row="0" Margin="6,6,6,0">
+                                <DockPanel LastChildFill="True" Background="{Binding Source={StaticResource Primary500}, Converter={StaticResource ColorToBrush}}">
                                     <Image x:Name="PART_WindowCaptionIcon" DockPanel.Dock="Left" VerticalAlignment="Top" HorizontalAlignment="Left" 
                                            Source="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Icon}"
                                            Margin="4" Width="22" Height="22" WindowChrome.IsHitTestVisibleInChrome="True"/>
@@ -131,6 +70,7 @@
                                     </Button>
                                     <Border />
                                 </DockPanel>
+                                </Border>
                             </Grid>
 
                             <ControlTemplate.Triggers>
