--- a/Calculator.Pages/GestureTrainingPage.Dictionary.xaml
+++ b/Calculator.Pages/GestureTrainingPage.Dictionary.xaml
@@ -25,27 +25,9 @@
         </Grid>
     </DataTemplate>
 
-    <Style TargetType="local:GestureTrainingFrame">
+    <Style TargetType="local:GestureTrainingPage" x:Key="GestureTrainingFrameStyle">
         <Style.Setters>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Grid DataContext="{Binding ElementName=This}">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Button Grid.Row="1" Grid.Column="0" Content="Save" Command="{Binding SaveCommand}" />
-                            <ScrollViewer Grid.Row="0" Grid.Column="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                                <ListView ItemTemplate="{StaticResource PathSampleTemplate}" ItemsSource="{Binding TrainingSet, Mode=TwoWay}" />
-                            </ScrollViewer>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+            
         </Style.Setters>
     </Style>
 </ResourceDictionary>
