--- a/Calculator.Pages/MainPage.xaml
+++ b/Calculator.Pages/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Calculator.Pages.MainFrame"
+﻿<Page x:Class="Calculator.Pages.MainPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,11 +10,27 @@
              xmlns:operators="clr-namespace:Calculator.Controls.Operators;assembly=Calculator.Controls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Template>
+             d:DesignHeight="300" d:DesignWidth="300" x:Name="This" Title="Main" WindowTitle="Main">
+    <Page.Template>
         <ControlTemplate>
-            <materialDesign:DialogHost Identifier="WindowDialog">
+            <materialDesign:DialogHost Identifier="WindowDialog" DataContext="{Binding ElementName=This}">
                 <DockPanel LastChildFill="True">
+                    <Menu IsMainMenu="True" DockPanel.Dock="Top">
+                        <MenuItem Header="_File" >
+                            <MenuItem Header="Exit" InputGestureText="Ctrl+E">
+                                <MenuItem.Icon>
+                                    <materialDesign:PackIcon Kind="ExitToApp" />
+                                </MenuItem.Icon>
+                            </MenuItem>
+                        </MenuItem>
+                        <MenuItem Header="_Tools" >
+                            <MenuItem Header="Train" InputGestureText="Ctrl+T" Command="{Binding NavigateToTrainCommand}">
+                                <MenuItem.Icon>
+                                    <materialDesign:PackIcon Kind="Settings" />
+                                </MenuItem.Icon>
+                            </MenuItem>
+                        </MenuItem>
+                    </Menu>
                     <keypad:Keypad DockPanel.Dock="Bottom" HorizontalAlignment="Center" x:Name="PART_Keypad" />
                     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                         <DockPanel LastChildFill="False">
@@ -179,5 +195,5 @@
                 </DockPanel>
             </materialDesign:DialogHost>
         </ControlTemplate>
-    </UserControl.Template>
-</UserControl>
+    </Page.Template>
+</Page>
